Add SSL support with auto-generated self-signed certificates

--- a/server.conf
+++ b/server.conf
@@ -3,6 +3,12 @@
 listen 8080;
 host 0.0.0.0;
 
+# SSL Configuration (optional)
+# When enabled, self-signed certificate will be auto-generated if keystore doesn't exist
+# ssl on;
+# ssl_keystore keystore.jks;
+# ssl_keystore_password changeit;
+
 # Default server
 server {
     root public;
