--- a/server.conf
+++ b/server.conf
@@ -1,18 +1,18 @@
 # Simple Web Server Configuration
 
-listen 8080;
+listen 8443;
 host 0.0.0.0;
 
 # SSL Configuration (optional)
 # When enabled, self-signed certificate will be auto-generated if keystore doesn't exist
-# ssl on;
-# ssl_keystore keystore.jks;
-# ssl_keystore_password changeit;
+ssl on;
+ssl_keystore keystore.jks;
+ssl_keystore_password changeit;
 
 # Default server
 server {
     root public;
-}
+}   
 
 # Virtual hosts
 # server {
